re-add top positioning This resolves some issues with scene cards flickering when hovered over as well as videos playing when not hovered.

--- a/ui/v2.5/src/components/Scenes/styles.scss
+++ b/ui/v2.5/src/components/Scenes/styles.scss
@@ -196,6 +196,9 @@ textarea.scene-description {
 
     &-video {
       position: absolute;
+      top: -9999px;
+      transition: top 0s;
+      transition-delay: 0s;
       visibility: hidden;
     }
 
@@ -226,6 +229,8 @@ textarea.scene-description {
     }
 
     .scene-card-preview-video {
+      top: 0;
+      transition-delay: 0.2s;
       visibility: visible;
     }
   }
